# drf-auth

./: db.sqlite3  docker-compose.yml  manage.py  pyproject.toml
auth_food_project/: asgi.py  settings.py  urls.py  wsgi.py
food/: models.py  serializers.py  urls.py  views.py
food/migrations/: 0001_initial.py
